--- a/fcc-cafe-menu/styles.css
+++ b/fcc-cafe-menu/styles.css
@@ -14,3 +14,11 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+
+.flavor {
+  text-align: left;
+}
+
+.item p {
+  display: inline-block;
+}
