--- a/fcc-cafe-menu/styles.css
+++ b/fcc-cafe-menu/styles.css
@@ -13,9 +13,11 @@ body {
   background-color: burlywood;
   margin-left: auto;
   margin-right: auto;
+  padding: 20px;
 }
 
-.flavor {
+.flavor,
+.desserts {
   text-align: left;
   width: 75%;
 }
