--- a/fcc-cafe-menu/styles.css
+++ b/fcc-cafe-menu/styles.css
@@ -1,12 +1,21 @@
+body {
+  background-image: url("https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg");
+  font-family: sans-serif;
+  padding: 20px;
+}
+
+h1 {
+  font-size: 40px;
+}
+
+h2 {
+  font-size: 30px;
+}
+
 h1,
 h2,
 p {
   text-align: center;
-}
-
-body {
-  background-image: url("https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg");
-  font-family: sans-serif;
 }
 
 .menu {
@@ -31,6 +40,13 @@ body {
 
 .item p {
   display: inline-block;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-size: 18px;
+}
+
+.price p {
+  font-size: 18px;
 }
 
 h1,
@@ -42,10 +58,24 @@ h2 {
   font-style: italic;
 }
 
-h1 {
-  font-size: 40px;
+hr {
+  height: 2px;
+  background-color: brown;
+  border-color: brown;
 }
 
-h2 {
-  font-size: 30px;
+.bottom-line {
+  margin-top: 25px;
+}
+
+a {
+  color: black;
+}
+
+a:visited {
+  color: black;
+}
+
+a:hover {
+  color: brown;
 }
